# AutoNestCut_Clean_Workspace

./: .gitignore  AutoNestCut_Clean_Workspace.code-workspace  README.md  fix_final.py  materials.json
Extension/: POWER_LOADER.rb  TEST_MATERIAL_BINDING.rb  TEST_MATERIAL_DB_PATH.rb
Extension/AutoNestCut/: CLEAR_AUTO_MATERIALS.rb  CLEAR_AUTO_MATERIALS_FIX.rb  COMPATIBILITY_CHECKER.rb  CPP_INTEGRATION_COMPLETE.md  DIAGNOSE_SLOW_ANALYSIS.rb  RELOAD_WITH_TIMING.rb  TEST_CPP_INTEGRATION.rb  TEST_LABEL_GENERATOR.rb  TEST_LABEL_INTEGRATION.rb  TEST_LABEL_SHEET_GENERATOR.rb  TEST_LABEL_SHEET_PREVIEW.rb  TEST_QR_CODE_GENERATOR.rb  compatibility.rb  config.rb  default_materials_database.json  main.rb  materials_database.rb  scheduler_data.json  test_edge_banding_generator.rb  test_exact_fit_nesting.rb  util.rb
Extension/AutoNestCut/cpp/: CMakeLists.txt  FILE_GUIDE.md  README.md  SETUP_GUIDE.md  SIMPLE_FIX.md  START_HERE.txt  WHAT_YOU_NEED_TO_DO.md  build.bat  build_mingw.bat  install_mingw.ps1  quick_test_input.json  test.bat  test_input.json  test_output.json
Extension/AutoNestCut/cpp/src/: geometry.cpp  geometry.h  main.cpp  nesting.cpp  nesting.h
Extension/AutoNestCut/exporters/: assembly_exporter.rb  cut_sequence_generator.rb  label_generator.rb  label_sheet_generator.rb  pdf_generator.rb  prawn_pdf_exporter.rb  qr_code_generator.rb  report_generator.rb  report_layout_fix.md  report_pdf_exporter.rb  svg_vector_exporter.rb  view_export_handler.rb
Extension/AutoNestCut/models/: board.rb  cladding_preset.rb  part.rb
Extension/AutoNestCut/processors/: async_processor.rb  (+4 more)
(+40 files in other folders)
